# plantguide

./: .env  .gitignore  AGENTS.bak  AGENTS.md  CLAUDE.md  LICENSE  Makefile  Makefile.hybrid  PARITY_TEST_RESULTS.md  PROPOSAL_TRAITS_TO_HABITAT.md  README.md  README_BILL.md  TRY Traits.txt  analysis_plan.md  causal_framework_visual.py  check_family_coverage.R  check_growth_form_coverage.R  check_growth_form_traits.R  config.yml  convert_shipley_paper.py  debug_fread.R  debug_rtry.R  debug_worldflora_columns.R  deploy.sh  dev.sh  douma_shipley_2022_summary.md  essential_papers_list.md  extract_family_wood_density.R  functiontoservice.md  gardening_consultancy_plan.md  global_validation_pipeline.md  medfate_estimates_generalizability.md  medfate_trait_estimation_comprehensive.md  medfate_trait_estimation_methods.md  medfate_wood_density_methodology.md  missing_try_traits_analysis.md  model_extension_diagram.md  multi_organ_methodology_reorganized.md  multi_organ_trait_methodology.md  multiorg_visual_diagram.py  (+8 more)
docs/: mathpix.txt  (+22 more)
shipley_checks/src/Stage_4/guild_scorer_rust/: .dockerignore  .gitignore  BENCHMARKING.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  Guild_Builder_Evaluation.md  Makefile  OPTIMIZATION_METRICS.md  PERFORMANCE_COMPARISON.md  docker-compose.yml  input.css  plant-api.service  tailwind.config.js
shipley_checks/src/Stage_4/guild_scorer_rust/assets/css/: styles.css
shipley_checks/src/Stage_4/guild_scorer_rust/scripts/: audit_list_column_access.sh  identify_list_columns.py
shipley_checks/src/Stage_4/guild_scorer_rust/src/: api_server.rs  compact_tree.rs  data.rs  lib.rs  query_engine.rs  scorer.rs  search_index.rs  suitability_cache.rs
shipley_checks/src/Stage_4/guild_scorer_rust/src/encyclopedia/: generator.rs  generator_json.rs  generator_md.rs  mod.rs  types.rs  view_builder.rs  view_models.rs
shipley_checks/src/Stage_4/guild_scorer_rust/src/encyclopedia/sections/: mod.rs  s1_identity.rs  s1_identity_card.rs  s2_growing_requirements.rs  s2_requirements.rs  s3_maintenance.rs  s3_maintenance_profile.rs  s4_ecosystem_services.rs  s4_services.rs  s5_biological_interactions.rs  s5_interactions.rs  s6_companion.rs  s6_companion_planting.rs  s7_biodiversity_value.rs  s7_related.rs
shipley_checks/src/Stage_4/guild_scorer_rust/src/explanation/: biocontrol_network_analysis.rs  csr_strategy_analysis.rs  ecosystem_services.rs  fungi_network_analysis.rs  generator.rs  mod.rs  nitrogen.rs  pathogen_control_network_analysis.rs  pest_analysis.rs  pollinator_network_analysis.rs  soil_ph.rs  structural_diversity_analysis.rs  taxonomic_profile_analysis.rs  types.rs  unified_taxonomy.rs
shipley_checks/src/Stage_4/guild_scorer_rust/src/metrics/: ecosystem_services.rs  m1_pest_pathogen_indep.rs  m2_growth_compatibility.rs  m3_insect_control.rs  m4_disease_control.rs  m5_beneficial_fungi.rs  m6_structural_diversity.rs  m7_pollinator_support.rs  mod.rs
shipley_checks/src/Stage_4/guild_scorer_rust/src/utils/: ecosystem_ratings.rs  lazy_helpers.rs  mod.rs  normalization.rs  organism_counter.rs  vernacular.rs
shipley_checks/src/Stage_4/guild_scorer_rust/src/web/: mod.rs
shipley_checks/src/Stage_4/guild_scorer_rust/templates/: base.html
shipley_checks/src/Stage_4/guild_scorer_rust/templates/encyclopedia/: _companion.html  _identity_card.html  _interactions.html  _maintenance.html  _requirements.html  _services.html
shipley_checks/src/Stage_4/guild_scorer_rust/templates/fragments/: search_results.html
shipley_checks/src/Stage_4/guild_scorer_rust/templates/pages/: encyclopedia.html  encyclopedia_v2.html  home.html  search.html
shipley_checks/src/Stage_4/guild_scorer_rust/tests/: api_integration_tests.rs  encyclopedia_integration_tests.rs
(+3585 files in other folders)
