[package]
name = "guild_scorer_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Data processing (10-100× faster than pandas)
# Upgraded to 0.46 to fix binview parquet reading bug
polars = { version = "0.46", features = ["lazy", "parquet", "csv", "dtype-full", "strings"] }

# Parallel processing
rayon = "1.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Performance utilities
ahash = "0.8"          # Faster hashing
smallvec = "1.11"      # Stack-allocated vectors
rustc-hash = "2.0"     # FxHashMap for small keys

# Math
libm = "0.2"

# Random sampling
rand = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
# Testing
approx = "0.5"         # Floating-point comparison
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
